{
  "version": 4,
  "terraform_version": "1.6.4",
  "serial": 373,
  "lineage": "32586011-bb18-1e47-3044-82c40a8c0ed8",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ac3cc151cfe0b683",
            "association_id": "eipassoc-03356b5b54dbbee5d",
            "domain": "vpc",
            "id": "eipalloc-0ac3cc151cfe0b683",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0185c8489bdf2cf35",
            "private_dns": "ip-10-0-0-56.ec2.internal",
            "private_ip": "10.0.0.56",
            "public_dns": "ec2-3-230-185-65.compute-1.amazonaws.com",
            "public_ip": "3.230.185.65",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:200997264007:internet-gateway/igw-037e499193221cc04",
            "id": "igw-037e499193221cc04",
            "owner_id": "200997264007",
            "tags": {
              "Managed-By": "terraform",
              "Name": "olalekan-IGW",
              "Owner-Email": "olalekanbabayemi1@gmail.com"
            },
            "tags_all": {
              "Managed-By": "terraform",
              "Name": "olalekan-IGW",
              "Owner-Email": "olalekanbabayemi1@gmail.com"
            },
            "vpc_id": "vpc-06bff728f3d6a913c"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "elb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:200997264007:loadbalancer/app/elb/ba12bfc832dbc9d5",
            "arn_suffix": "app/elb/ba12bfc832dbc9d5",
            "desync_mitigation_mode": "defensive",
            "dns_name": "elb-1261860336.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:200997264007:loadbalancer/app/elb/ba12bfc832dbc9d5",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "elb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0690558ea14b439e5"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0aaa716bc8c5c24c0"
              },
              {
                "subnet_id": "subnet-0e6ef73f3e2560e7f"
              }
            ],
            "subnets": [
              "subnet-0aaa716bc8c5c24c0",
              "subnet-0e6ef73f3e2560e7f"
            ],
            "tags": {
              "Managed-By": "terraform",
              "Name": "olalekan-elb",
              "Owner-Email": "olalekanbabayemi1@gmail.com"
            },
            "tags_all": {
              "Managed-By": "terraform",
              "Name": "olalekan-elb",
              "Owner-Email": "olalekanbabayemi1@gmail.com"
            },
            "vpc_id": "vpc-06bff728f3d6a913c",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.elb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "ilb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:200997264007:loadbalancer/app/ilb/829ebee4c3d48fbe",
            "arn_suffix": "app/ilb/829ebee4c3d48fbe",
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-ilb-1108110836.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:200997264007:loadbalancer/app/ilb/829ebee4c3d48fbe",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ilb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-011a0d34b31138b1b"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-04db88820e07e3f3c"
              },
              {
                "subnet_id": "subnet-0a5af92f0c26a88df"
              }
            ],
            "subnets": [
              "subnet-04db88820e07e3f3c",
              "subnet-0a5af92f0c26a88df"
            ],
            "tags": {
              "Environment": "production"
            },
            "tags_all": {
              "Environment": "production"
            },
            "vpc_id": "vpc-06bff728f3d6a913c",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.ilb",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "elb-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:200997264007:listener/app/elb/ba12bfc832dbc9d5/46a59876831d4185",
            "certificate_arn": "arn:aws:acm:us-east-1:200997264007:certificate/1ec8efb8-9bfd-40b1-868a-218f1f6993a5",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:200997264007:targetgroup/nginx-tg/f0ae2ee66779c484",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:200997264007:listener/app/elb/ba12bfc832dbc9d5/46a59876831d4185",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:200997264007:loadbalancer/app/elb/ba12bfc832dbc9d5",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_acm_certificate.lekandevops",
            "aws_lb.elb",
            "aws_lb_target_group.nginx-tg",
            "aws_security_group.elb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "web-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:200997264007:listener/app/ilb/829ebee4c3d48fbe/bd530175573b4a32",
            "certificate_arn": "arn:aws:acm:us-east-1:200997264007:certificate/1ec8efb8-9bfd-40b1-868a-218f1f6993a5",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:200997264007:targetgroup/wordpress-tg/1a8ed470e7f63aff",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:200997264007:listener/app/ilb/829ebee4c3d48fbe/bd530175573b4a32",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:200997264007:loadbalancer/app/ilb/829ebee4c3d48fbe",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_acm_certificate.lekandevops",
            "aws_lb.ilb",
            "aws_lb_target_group.wordpress-tg",
            "aws_security_group.ilb",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "tooling-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:200997264007:targetgroup/tooling-tg/9f6696e01ddca5b5",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:200997264007:listener-rule/app/ilb/829ebee4c3d48fbe/bd530175573b4a32/bd0c0826c4878b86",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "tooling.lekandevops.site"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:200997264007:listener-rule/app/ilb/829ebee4c3d48fbe/bd530175573b4a32/bd0c0826c4878b86",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:200997264007:listener/app/ilb/829ebee4c3d48fbe/bd530175573b4a32",
            "priority": 99,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_acm_certificate.lekandevops",
            "aws_lb.ilb",
            "aws_lb_listener.web-listener",
            "aws_lb_target_group.tooling-tg",
            "aws_lb_target_group.wordpress-tg",
            "aws_security_group.ilb",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "nginx-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:200997264007:targetgroup/nginx-tg/f0ae2ee66779c484",
            "arn_suffix": "targetgroup/nginx-tg/f0ae2ee66779c484",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 10,
                "matcher": "200",
                "path": "/healthcheck",
                "port": "443",
                "protocol": "HTTPS",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:200997264007:targetgroup/nginx-tg/f0ae2ee66779c484",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "nginx-tg",
            "port": 443,
            "protocol": "HTTPS",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-06bff728f3d6a913c"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tooling-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:200997264007:targetgroup/tooling-tg/9f6696e01ddca5b5",
            "arn_suffix": "targetgroup/tooling-tg/9f6696e01ddca5b5",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 10,
                "matcher": "200",
                "path": "/healthcheck",
                "port": "443",
                "protocol": "HTTPS",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:200997264007:targetgroup/tooling-tg/9f6696e01ddca5b5",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tooling-tg",
            "port": 443,
            "protocol": "HTTPS",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-06bff728f3d6a913c"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "wordpress-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:200997264007:targetgroup/wordpress-tg/1a8ed470e7f63aff",
            "arn_suffix": "targetgroup/wordpress-tg/1a8ed470e7f63aff",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 10,
                "matcher": "200",
                "path": "/healthcheck",
                "port": "443",
                "protocol": "HTTPS",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:200997264007:targetgroup/wordpress-tg/1a8ed470e7f63aff",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "wordpress-tg",
            "port": 443,
            "protocol": "HTTPS",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-06bff728f3d6a913c"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ac3cc151cfe0b683",
            "association_id": "eipassoc-03356b5b54dbbee5d",
            "connectivity_type": "public",
            "id": "nat-06ccb84d855b876de",
            "network_interface_id": "eni-0185c8489bdf2cf35",
            "private_ip": "10.0.0.56",
            "public_ip": "3.230.185.65",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0e6ef73f3e2560e7f",
            "tags": {
              "Managed-By": "terraform",
              "Name": "olalekan-NAT",
              "Owner-Email": "olalekanbabayemi1@gmail.com"
            },
            "tags_all": {
              "Managed-By": "terraform",
              "Name": "olalekan-NAT",
              "Owner-Email": "olalekanbabayemi1@gmail.com"
            }
          },
          "dependencies": [
            "aws_eip.nat-eip",
            "aws_internet_gateway.igw",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-050712dbf6fda9a051080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-06ccb84d855b876de",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-050712dbf6fda9a05",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat-eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private-rtb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-037e499193221cc04",
            "id": "r-rtb-0509ce8c32e9fb3311080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0509ce8c32e9fb331",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public-rtb",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:200997264007:route-table/rtb-050712dbf6fda9a05",
            "id": "rtb-050712dbf6fda9a05",
            "owner_id": "200997264007",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-06ccb84d855b876de",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Managed-By": "terraform",
              "Name": "olalekan-private-rtb",
              "Owner-Email": "olalekanbabayemi1@gmail.com"
            },
            "tags_all": {
              "Managed-By": "terraform",
              "Name": "olalekan-private-rtb",
              "Owner-Email": "olalekanbabayemi1@gmail.com"
            },
            "timeouts": null,
            "vpc_id": "vpc-06bff728f3d6a913c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:200997264007:route-table/rtb-0509ce8c32e9fb331",
            "id": "rtb-0509ce8c32e9fb331",
            "owner_id": "200997264007",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-037e499193221cc04",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Managed-By": "terraform",
              "Name": "olalekan-public-rtb",
              "Owner-Email": "olalekanbabayemi1@gmail.com"
            },
            "tags_all": {
              "Managed-By": "terraform",
              "Name": "olalekan-public-rtb",
              "Owner-Email": "olalekanbabayemi1@gmail.com"
            },
            "timeouts": null,
            "vpc_id": "vpc-06bff728f3d6a913c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-route-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fd2678b207877820",
            "route_table_id": "rtb-050712dbf6fda9a05",
            "subnet_id": "subnet-04db88820e07e3f3c"
          },
          "dependencies": [
            "aws_route_table.private-rtb",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cb623b5e7cf220cb",
            "route_table_id": "rtb-050712dbf6fda9a05",
            "subnet_id": "subnet-0a5af92f0c26a88df"
          },
          "dependencies": [
            "aws_route_table.private-rtb",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-088330c67fd5ddc39",
            "route_table_id": "rtb-050712dbf6fda9a05",
            "subnet_id": "subnet-02648a81911a95119"
          },
          "dependencies": [
            "aws_route_table.private-rtb",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-001bb92b87e90cee3",
            "route_table_id": "rtb-050712dbf6fda9a05",
            "subnet_id": "subnet-08fee3021baf1ba5a"
          },
          "dependencies": [
            "aws_route_table.private-rtb",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-route-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0515b2bead77c346e",
            "route_table_id": "rtb-0509ce8c32e9fb331",
            "subnet_id": "subnet-0e6ef73f3e2560e7f"
          },
          "dependencies": [
            "aws_route_table.public-rtb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b159b6741dde7cb3",
            "route_table_id": "rtb-0509ce8c32e9fb331",
            "subnet_id": "subnet-0aaa716bc8c5c24c0"
          },
          "dependencies": [
            "aws_route_table.public-rtb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:200997264007:security-group/sg-05f5f7a63b2ce1426",
            "description": "Allow ssh to bastion",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05f5f7a63b2ce1426",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "bastion",
            "name_prefix": "",
            "owner_id": "200997264007",
            "revoke_rules_on_delete": false,
            "tags": {
              "Managed-By": "terraform",
              "Name": "olalekan-bastion-sg",
              "Owner-Email": "olalekanbabayemi1@gmail.com"
            },
            "tags_all": {
              "Managed-By": "terraform",
              "Name": "olalekan-bastion-sg",
              "Owner-Email": "olalekanbabayemi1@gmail.com"
            },
            "timeouts": null,
            "vpc_id": "vpc-06bff728f3d6a913c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "datalayer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:200997264007:security-group/sg-083cb9d6b8600ca50",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-083cb9d6b8600ca50",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": " allow access from bastion to rds",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05f5f7a63b2ce1426"
                ],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [],
                "description": " allow webservers access rds ",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03fa4f86a9941f92c"
                ],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [],
                "description": " allow webservers to access efs",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03fa4f86a9941f92c"
                ],
                "self": false,
                "to_port": 2049
              }
            ],
            "name": "datalayer",
            "name_prefix": "",
            "owner_id": "200997264007",
            "revoke_rules_on_delete": false,
            "tags": {
              "Managed-By": "terraform",
              "Name": "olalekan-datalayer-sg",
              "Owner-Email": "olalekanbabayemi1@gmail.com"
            },
            "tags_all": {
              "Managed-By": "terraform",
              "Name": "olalekan-datalayer-sg",
              "Owner-Email": "olalekanbabayemi1@gmail.com"
            },
            "timeouts": null,
            "vpc_id": "vpc-06bff728f3d6a913c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "efs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:200997264007:security-group/sg-0d24bac898c20d591",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d24bac898c20d591",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": " allow traffic from webservers",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03fa4f86a9941f92c"
                ],
                "self": false,
                "to_port": 2049
              }
            ],
            "name": "efs",
            "name_prefix": "",
            "owner_id": "200997264007",
            "revoke_rules_on_delete": false,
            "tags": {
              "Managed-By": "terraform",
              "Name": "olalekan-efs-sg",
              "Owner-Email": "olalekanbabayemi1@gmail.com"
            },
            "tags_all": {
              "Managed-By": "terraform",
              "Name": "olalekan-efs-sg",
              "Owner-Email": "olalekanbabayemi1@gmail.com"
            },
            "timeouts": null,
            "vpc_id": "vpc-06bff728f3d6a913c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:200997264007:security-group/sg-0690558ea14b439e5",
            "description": "Allow all Tls inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0690558ea14b439e5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "https",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "external load balancer",
            "name_prefix": "",
            "owner_id": "200997264007",
            "revoke_rules_on_delete": false,
            "tags": {
              "Managed-By": "terraform",
              "Name": "olalekan-elb-sg",
              "Owner-Email": "olalekanbabayemi1@gmail.com"
            },
            "tags_all": {
              "Managed-By": "terraform",
              "Name": "olalekan-elb-sg",
              "Owner-Email": "olalekanbabayemi1@gmail.com"
            },
            "timeouts": null,
            "vpc_id": "vpc-06bff728f3d6a913c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ilb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:200997264007:security-group/sg-011a0d34b31138b1b",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-011a0d34b31138b1b",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": " allow traffic from proxy",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-043b2b8c731613bae"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "internal-lb",
            "name_prefix": "",
            "owner_id": "200997264007",
            "revoke_rules_on_delete": false,
            "tags": {
              "Managed-By": "terraform",
              "Name": "olalekan-ilb-sg",
              "Owner-Email": "olalekanbabayemi1@gmail.com"
            },
            "tags_all": {
              "Managed-By": "terraform",
              "Name": "olalekan-ilb-sg",
              "Owner-Email": "olalekanbabayemi1@gmail.com"
            },
            "timeouts": null,
            "vpc_id": "vpc-06bff728f3d6a913c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "reverseproxy",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:200997264007:security-group/sg-043b2b8c731613bae",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-043b2b8c731613bae",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": " allow traffic from bastion",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05f5f7a63b2ce1426"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": " allow traffic from elb",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0690558ea14b439e5"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "reverse-proxy",
            "name_prefix": "",
            "owner_id": "200997264007",
            "revoke_rules_on_delete": false,
            "tags": {
              "Managed-By": "terraform",
              "Name": "olalekan-reverseproxy-sg",
              "Owner-Email": "olalekanbabayemi1@gmail.com"
            },
            "tags_all": {
              "Managed-By": "terraform",
              "Name": "olalekan-reverseproxy-sg",
              "Owner-Email": "olalekanbabayemi1@gmail.com"
            },
            "timeouts": null,
            "vpc_id": "vpc-06bff728f3d6a913c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "webservers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:200997264007:security-group/sg-03fa4f86a9941f92c",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03fa4f86a9941f92c",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": " allow traffic from bastion",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05f5f7a63b2ce1426"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": " allow traffic from ilb",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-011a0d34b31138b1b"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "webservers",
            "name_prefix": "",
            "owner_id": "200997264007",
            "revoke_rules_on_delete": false,
            "tags": {
              "Managed-By": "terraform",
              "Name": "olalekan-webservers-sg",
              "Owner-Email": "olalekanbabayemi1@gmail.com"
            },
            "tags_all": {
              "Managed-By": "terraform",
              "Name": "olalekan-webservers-sg",
              "Owner-Email": "olalekanbabayemi1@gmail.com"
            },
            "timeouts": null,
            "vpc_id": "vpc-06bff728f3d6a913c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-bast",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": " allow traffic from bastion",
            "from_port": 22,
            "id": "sgrule-1408500627",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-03fa4f86a9941f92c",
            "security_group_rule_id": "sgr-06b23387e197fa46b",
            "self": false,
            "source_security_group_id": "sg-05f5f7a63b2ce1426",
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion",
            "aws_security_group.webservers",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-bast-rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": " allow access from bastion to rds",
            "from_port": 3306,
            "id": "sgrule-2096455895",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-083cb9d6b8600ca50",
            "security_group_rule_id": "sgr-0d6573bef43074288",
            "self": false,
            "source_security_group_id": "sg-05f5f7a63b2ce1426",
            "timeouts": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion",
            "aws_security_group.datalayer",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": " allow traffic from bastion",
            "from_port": 22,
            "id": "sgrule-1829700048",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-043b2b8c731613bae",
            "security_group_rule_id": "sgr-00366c8650a78145e",
            "self": false,
            "source_security_group_id": "sg-05f5f7a63b2ce1426",
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion",
            "aws_security_group.reverseproxy",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-elb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": " allow traffic from elb",
            "from_port": 443,
            "id": "sgrule-4082534253",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-043b2b8c731613bae",
            "security_group_rule_id": "sgr-0ba954c24b188cfd1",
            "self": false,
            "source_security_group_id": "sg-0690558ea14b439e5",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.elb",
            "aws_security_group.reverseproxy",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-ilb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": " allow traffic from ilb",
            "from_port": 443,
            "id": "sgrule-2944496338",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-03fa4f86a9941f92c",
            "security_group_rule_id": "sgr-04ec79c25db75564e",
            "self": false,
            "source_security_group_id": "sg-011a0d34b31138b1b",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ilb",
            "aws_security_group.webservers",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-reverse-proxy",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": " allow traffic from proxy",
            "from_port": 443,
            "id": "sgrule-3910815576",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-011a0d34b31138b1b",
            "security_group_rule_id": "sgr-061b878bccf84cd32",
            "self": false,
            "source_security_group_id": "sg-043b2b8c731613bae",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ilb",
            "aws_security_group.reverseproxy",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-webserver-rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": " allow webservers access rds ",
            "from_port": 3306,
            "id": "sgrule-2491660857",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-083cb9d6b8600ca50",
            "security_group_rule_id": "sgr-01922c640d44b0fad",
            "self": false,
            "source_security_group_id": "sg-03fa4f86a9941f92c",
            "timeouts": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.datalayer",
            "aws_security_group.webservers",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-webservers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": " allow traffic from webservers",
            "from_port": 2049,
            "id": "sgrule-619667539",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0d24bac898c20d591",
            "security_group_rule_id": "sgr-0b2aec5782d1f7ffe",
            "self": false,
            "source_security_group_id": "sg-03fa4f86a9941f92c",
            "timeouts": null,
            "to_port": 2049,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.efs",
            "aws_security_group.webservers",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-webservers-efs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": " allow webservers to access efs",
            "from_port": 2049,
            "id": "sgrule-121973427",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-083cb9d6b8600ca50",
            "security_group_rule_id": "sgr-0779ed262f5e50651",
            "self": false,
            "source_security_group_id": "sg-03fa4f86a9941f92c",
            "timeouts": null,
            "to_port": 2049,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.datalayer",
            "aws_security_group.webservers",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:200997264007:subnet/subnet-04db88820e07e3f3c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04db88820e07e3f3c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "200997264007",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Managed-By": "terraform",
              "Name": "olalekan-private-subnet-1",
              "Owner-Email": "olalekanbabayemi1@gmail.com"
            },
            "tags_all": {
              "Managed-By": "terraform",
              "Name": "olalekan-private-subnet-1",
              "Owner-Email": "olalekanbabayemi1@gmail.com"
            },
            "vpc_id": "vpc-06bff728f3d6a913c"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:200997264007:subnet/subnet-0a5af92f0c26a88df",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a5af92f0c26a88df",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "200997264007",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Managed-By": "terraform",
              "Name": "olalekan-private-subnet-2",
              "Owner-Email": "olalekanbabayemi1@gmail.com"
            },
            "tags_all": {
              "Managed-By": "terraform",
              "Name": "olalekan-private-subnet-2",
              "Owner-Email": "olalekanbabayemi1@gmail.com"
            },
            "vpc_id": "vpc-06bff728f3d6a913c"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:200997264007:subnet/subnet-02648a81911a95119",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02648a81911a95119",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "200997264007",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Managed-By": "terraform",
              "Name": "olalekan-private-subnet-3",
              "Owner-Email": "olalekanbabayemi1@gmail.com"
            },
            "tags_all": {
              "Managed-By": "terraform",
              "Name": "olalekan-private-subnet-3",
              "Owner-Email": "olalekanbabayemi1@gmail.com"
            },
            "vpc_id": "vpc-06bff728f3d6a913c"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:200997264007:subnet/subnet-08fee3021baf1ba5a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08fee3021baf1ba5a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "200997264007",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Managed-By": "terraform",
              "Name": "olalekan-private-subnet-4",
              "Owner-Email": "olalekanbabayemi1@gmail.com"
            },
            "tags_all": {
              "Managed-By": "terraform",
              "Name": "olalekan-private-subnet-4",
              "Owner-Email": "olalekanbabayemi1@gmail.com"
            },
            "vpc_id": "vpc-06bff728f3d6a913c"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:200997264007:subnet/subnet-0e6ef73f3e2560e7f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e6ef73f3e2560e7f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "200997264007",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Managed-By": "terraform",
              "Name": "olalekan-public-subnet-1",
              "Owner-Email": "olalekanbabayemi1@gmail.com"
            },
            "tags_all": {
              "Managed-By": "terraform",
              "Name": "olalekan-public-subnet-1",
              "Owner-Email": "olalekanbabayemi1@gmail.com"
            },
            "vpc_id": "vpc-06bff728f3d6a913c"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:200997264007:subnet/subnet-0aaa716bc8c5c24c0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0aaa716bc8c5c24c0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "200997264007",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Managed-By": "terraform",
              "Name": "olalekan-public-subnet-2",
              "Owner-Email": "olalekanbabayemi1@gmail.com"
            },
            "tags_all": {
              "Managed-By": "terraform",
              "Name": "olalekan-public-subnet-2",
              "Owner-Email": "olalekanbabayemi1@gmail.com"
            },
            "vpc_id": "vpc-06bff728f3d6a913c"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:200997264007:vpc/vpc-06bff728f3d6a913c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-023deb8ff61d125cc",
            "default_route_table_id": "rtb-0166cfd1997fcf9c0",
            "default_security_group_id": "sg-0b55480a469997712",
            "dhcp_options_id": "dopt-069de28935289ca2e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06bff728f3d6a913c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0166cfd1997fcf9c0",
            "owner_id": "200997264007",
            "tags": {
              "Managed-By": "terraform",
              "Name": "olalekan-vpc",
              "Owner-Email": "olalekanbabayemi1@gmail.com"
            },
            "tags_all": {
              "Managed-By": "terraform",
              "Name": "olalekan-vpc",
              "Owner-Email": "olalekanbabayemi1@gmail.com"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}